# gstdemo

./: .gitignore  CMakeLists.txt  MediaInfo.c  MediaInfo.h  MediaInfoPrivate.h  Player.c  Player.h  PlayerDefine.h  PlayerMainContextSignalDispatcher.c  PlayerMainContextSignalDispatcher.h  PlayerPrelude.h  PlayerSignalDispatcher.c  PlayerSignalDispatcher.h  PlayerSignalDispatcherPrivate.h  PlayerTypes.h  main.c  playback.c  player-define.h  player-g-main-context-signal-dispatcher.c  player-g-main-context-signal-dispatcher.h  player-media-info-private.h  player-media-info.c  player-media-info.h  player-signal-dispatcher-private.h  player-signal-dispatcher.c  player-signal-dispatcher.h  player-types.h  player.c  player.h
